@@ -1,3 +1,7 @@
+2009-02-05 Steffen Kamper <info@sk-typo3.de>
+
+	* Fixed bug #10335: Feature: highlight php code in "View result"  
+
 2009-02-03 Steffen Kamper <info@sk-typo3.de>
 
 	* Fixed bug #10332: MySQL keywords are not complete 
